--- a/4da/es5.html
+++ b/4da/es5.html
@@ -14,6 +14,10 @@
     color:blue;
   }
   
+  .inclinato {
+    font-style: italic;
+  }
+  
 </style>
 </head>
   <body>
@@ -21,7 +25,7 @@
    Saturno <br/>
     Il primo studio, ..... dello <span class="giallo-rosso">Swedish Institute of Space Physics</span>, ... e
     dell'Università dello Iowa, si è con......
-    <span class="scritta-blu">SKR (Saturtn kilometyric radiation)</span>.
+    <span class="scritta-blu">SKR <span class="inclinato">(Saturtn kilometyric radiation)</span></span>.
   </p>
     <p>...
     </p>
