--- a/4br/es6.html
+++ b/4br/es6.html
@@ -38,10 +38,10 @@
   <body>
      <table>
        <tr>
-         <td rowspan="2" style="width:50px;"><img src="bacheca_85px.png" /></td>
+         <td rowspan="2" style="width:50px;"><img src="https://russell-moro-bp.github.io/img/bacheca_85px.png" /></td>
          <td style="width: 20%"><span class="testo-spesso">BACHECA</span></td>
          <td><span class="testo-fine">Bacheca Online</span></td>
-         <td style="width:50px;"><img src="bollo_help_2.png" /></td>
+         <td style="width:50px;"><img src="https://russell-moro-bp.github.io/img/bollo_help_2.png" /></td>
        </tr> 
        <tr>
          <!-- <td></td> -->
