--- a/4ca/es6.html
+++ b/4ca/es6.html
@@ -41,7 +41,7 @@ img {
            <td rowspan="2" style="width: 50px"><img src="https://russell-moro-bp.github.io/img/bacheca_85px.png" /></td>
            <td class="title" style="width: 20%">BACHECA</td>
            <td class="title_grey">Bacheca online</td>
-           <td style="width: 50px;text-align: center;"><img src="https://russell-moro-bp.github.io/img/img/bollo_help_2.png" /></td>
+           <td style="width: 50px;text-align: center;"><img src="https://russell-moro-bp.github.io/img/bollo_help_2.png" /></td>
          </tr>
          <tr>
             <!-- -->
