--- a/4ca/es6.html
+++ b/4ca/es6.html
@@ -15,16 +15,21 @@ td {
   color: grey;
 }  
   
+ .font-titolo {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5em;
+  }  
+  
 td.title {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 1.5em;
+  /* font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5em;*/
   color:red;
   font-weight: 800;
 } 
 
 td.title_grey {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 1.5em;
+  /* font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5em; */
   color: grey;
   font-weight: 100;
 } 
@@ -39,8 +44,8 @@ img {
     <table>
          <tr>
            <td rowspan="2" style="width: 50px"><img src="https://russell-moro-bp.github.io/img/bacheca_85px.png" /></td>
-           <td class="title" style="width: 20%">BACHECA</td>
-           <td class="title_grey">Bacheca online</td>
+           <td class="title font-titolo" style="width: 20%">BACHECA</td>
+           <td class="title_grey font-titolo">Bacheca online</td>
            <td style="width: 50px;text-align: center;"><img src="https://russell-moro-bp.github.io/img/bollo_help_2.png" /></td>
          </tr>
          <tr>
